@@ -38,6 +38,7 @@ typedef enum
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
     MACHINE_MACBOOK_3,
+    MACHINE_MACBOOK_4,
 
     MACHINE_MACBOOKAIR_1,
 #else
